--- a/view/frontend/templates/product/view/list.phtml
+++ b/view/frontend/templates/product/view/list.phtml
@@ -21,8 +21,13 @@ $_items = $block->getReviewsCollection()->getItems();
 $format = $block->getDateFormat() ?: \IntlDateFormatter::SHORT;
 
 $_objectManager = \Magento\Framework\App\ObjectManager::getInstance();
-$storeManager = $_objectManager->get('\Magento\Store\Model\StoreManagerInterface');
-$mediaDirectoryPath= $storeManager->getStore()->getBaseUrl(\Magento\Framework\UrlInterface::URL_TYPE_WEB).'pub/media/review_images';
+$_storeManager = $_objectManager->get('\Magento\Store\Model\StoreManagerInterface');
+
+$mediaDirectoryPath = $_storeManager->getStore()->getBaseUrl(\Magento\Framework\UrlInterface::URL_TYPE_MEDIA) . 'review_images';
+
+if(strpos($mediaDirectoryPath,'/index.php/') !== false){
+    $mediaDirectoryPath = str_replace('/index.php/','/',$mediaDirectoryPath);    
+}
 
 ?>
 <?php if (count($_items)): ?>
